// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.name.bitbucket.help"
    id="name.bitbucket"
    maxLength={100}
    onFieldChange={[MockFunction]}
    propKey="key"
    value=""
  />
  <AlmDefinitionFormField
    help={
      <FormattedMessage
        defaultMessage="settings.pr_decoration.form.url.bitbucket.help"
        id="settings.pr_decoration.form.url.bitbucket.help"
        values={
          Object {
            "example": "https://bitbucket-server.your-company.com",
          }
        }
      />
    }
    id="url.bitbucket"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value=""
  />
  <AlmDefinitionFormField
    id="personal_access_token"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="personalAccessToken"
    value=""
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.name.bitbucket.help"
    id="name.bitbucket"
    maxLength={100}
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmDefinitionFormField
    help={
      <FormattedMessage
        defaultMessage="settings.pr_decoration.form.url.bitbucket.help"
        id="settings.pr_decoration.form.url.bitbucket.help"
        values={
          Object {
            "example": "https://bitbucket-server.your-company.com",
          }
        }
      />
    }
    id="url.bitbucket"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value="http://bbs.enterprise.com"
  />
  <AlmDefinitionFormField
    id="personal_access_token"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="personalAccessToken"
    value="asdf1234"
  />
</Fragment>
`;
